# lightning-project-template

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
notebooks/: dummy.ipynb
project/datasets/: dummy.py
project/models/: dummy.py
scripts/: dummy.py
tests/datasets/: test_dummy.py
tests/models/: test_dummy.py
