# See the following PEPs for more information
# https://peps.python.org/pep-0517/
# https://peps.python.org/pep-0518/
# https://peps.python.org/pep-0621/

# ========================== #
#        Build System        #
# ========================== #

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ========================== #
#      Project Metadata      #
# ========================== #

[project]
name = "YOUR_PROJECT_NAME"
dynamic = ["version"]
description = "YOUR_PROJECT_DESCRIPTION"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "AUTHOR_NAME", email = "AUTHOR_EMAIL" },
]
maintainers = [
    { name = "MAINTAINER_NAME", email = "MAINTAINER_EMAIL"}
]
keywords = [
    "YOUR",
    "PROJECT",
    "KEYWORDS",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: GPU",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU :: NVIDIA CUDA :: 11",
    "Environment :: GPU :: NVIDIA CUDA :: 11.7",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
    # See https://pypi.org/classifiers/ for more classifiers
]
dependencies = [
    "torch>=2.0.1+cu117",
    "torchaudio>=2.0.2+cu117",
    "torchtext>=0.15.2+cu117",
    "torchvision>=0.15.2+cu117",
    "torchinfo",
    "tensorboard",
    "python-dotenv",
    "matplotlib",
    "jupyter",
    "lightning>=2.0",
]

[project.optional-dependencies]
dev = [
    "hatch",
    "ruff",
    "mypy",
    "pytest",
]
# Reserved for future addition of --only-deps option to `pip install`
# See https://github.com/pypa/pip/issues/11440 for more information

[project.urls]
GitHub = "https://www.github.com/YOUR/REPOSITORY"

# ========================== #
#      [tool.*] Sections     #
# ========================== #

[tool.hatch.build]
only-include = ["project"]
# See the following documentations for more information
# https://hatch.pypa.io/latest/build/
# https://hatch.pypa.io/latest/config/build/

[tool.hatch.version]
path = "project/__about__.py"
# See the following documentation for more information
# https://hatch.pypa.io/latest/version/

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
allow_redefinition = true
show_column_numbers = true
show_error_codes = true
pretty = true
exclude = ["tests/"]
# See the following documentation for more information
# https://mypy.readthedocs.io/en/stable/config_file.html

[[tool.mypy.overrides]]
module = [
    "lightning",
    "torchvision",
    "torchvision.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests/"]
# See the following documentation for more information
# https://docs.pytest.org/en/latest/reference/customize.html

[tool.ruff]
line-length = 88
ignore-init-module-imports = true
# See the following documentations for more information
# https://beta.ruff.rs/docs/configuration/
# https://beta.ruff.rs/docs/settings/
# https://beta.ruff.rs/docs/rules/

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.isort]
known-first-party = ["project"]
